# insider-trading-reporting

./: .gitignore  GEMINI.md  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: refactor.prompt.md
agentic_stock_analysis/: financials_stats.py  news_feed.py
agentic_stock_analysis/agents/: insider_analyst.py
agentic_stock_analysis/config/: __init__.py  base.py
agentic_stock_analysis/models/: stock_info.py
agentic_stock_analysis/sources/: company_financials.py
config/: base.py  utils.py
env/: dev.env.example
mocks/: capitol_trades_scrape_sample.txt
src/: company_financials.py  financials_stats.py  sentiment_analysis.py
src/models/: stock_info.py
