[tool.poetry]
name = "insider-stock-analysis"
version = "0.1.0"
description = ""
authors = ["vitezslav.slavik <vitezslav.slavik@pwc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
streamlit = "^1.41.1"
langchain-openai = "^0.3.3"
pydantic = "^2.10.6"
plotly = "^6.0.0"
fsspec = "^2024.12.0"
chromadb = "^0.6.3"
jupyter = "^1.1.1"
instructor = "^1.7.2"
openai = "^1.65.2"
transformers = "^4.50.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
